<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.recommenders</groupId>
	<artifactId>org.eclipse.recommenders.parent</artifactId>
	<version>0.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<build-alias>b000</build-alias>
		<tycho-version>0.10.0</tycho-version>
		<osgi-test-version>0.10.0</osgi-test-version>
		<emma.session.out.file>${project.build.directory}/emma/${project.artifactId}.es</emma.session.out.file>
		<emma.filter>*</emma.filter>
		<eclemma.instrument.bundles>
			org.eclipse.recommenders.commons.utils,org.eclipse.recommenders.commons.utils.gson
		</eclemma.instrument.bundles>
		<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
	</properties>
	
	<repositories>
		<repository>
			<id>helios</id>
			<layout>p2</layout>
			<url>http://vandyk.st.informatik.tu-darmstadt.de/mirrors/helios/</url>
		</repository>
		<repository>
			<id>recommenders-3rd</id>
			<layout>p2</layout>
			<url>http://vandyk.st.informatik.tu-darmstadt.de/updates/3rd-head/</url>
		</repository>
		<repository>
			<id>swtbot</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
		</repository>
		<repository>
			<id>bayesnet</id>
			<layout>p2</layout>
			<url>http://vandyk.st.informatik.tu-darmstadt.de/updates/students/th/michael-bayes/org.eclipse.recommenders.bayes.repository/target/site/</url>
		</repository>
	</repositories>


	<profiles>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>unix</family>
					<name>mac os x</name>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
	
	
		<profile>
			<id>build-number</id>
			<activation>
				<property>
					<name>env.BUILD_NUMBER</name>
				</property>
			</activation>
			
			<properties>
				<build-alias>b${env.BUILD_NUMBER}</build-alias>
			</properties>
		</profile>
	
		<profile>
			<id>coverage</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.tycho</groupId>
						<artifactId>maven-osgi-test-plugin</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<systemProperties combine.children="append">
								<eclemma.help>true</eclemma.help>
								<emma.session.out.file>${emma.session.out.file}</emma.session.out.file>
								<emma.filter>${emma.filter}</emma.filter>
								<eclemma.instrument.bundles>${eclemma.instrument.bundles}</eclemma.instrument.bundles>
							</systemProperties>
							<frameworkExtensions>
								<frameworkExtension>
									<groupId>org.eclemma.runtime.equinox</groupId>
									<artifactId>org.eclemma.runtime.equinox</artifactId>
									<version>1.1.0.200908261008</version>
								</frameworkExtension>
							</frameworkExtensions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<ignoreTychoRepositories>false</ignoreTychoRepositories>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>	
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<phase>process-classes</phase>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- http://software.2206966.n2.nabble.com/Tycho-qualifier-td5659840.html -->
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<format>'v'yyyyMMdd-HHmm'-${build-alias}'</format>
					<archiveSite>true</archiveSite>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.sonatype.tycho</groupId>
				<artifactId>maven-osgi-test-plugin</artifactId>
				<version>${tycho-version}</version>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.9.0</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<encoding>UTF-8</encoding>
					<header>org.eclipse.recommenders.releng/etc/license-tu-darmstadt-2011.txt</header>
					<validHeaders>
						<validHeader>org.eclipse.recommenders.releng/etc/license-fritz-kaluza-2010.txt</validHeader>
						<validHeader>org.eclipse.recommenders.releng/etc/license-fritz-kaluza-2010.txt</validHeader>
						<validHeader>org.eclipse.recommenders.releng/etc/license-tu-darmstadt-2010.txt</validHeader>
						<validHeader>org.eclipse.recommenders.releng/etc/license-tu-darmstadt-2011.txt</validHeader>
						<validHeader>org.eclipse.recommenders.releng/etc/license-henss-2010.txt</validHeader>
						<validHeader>org.eclipse.recommenders.releng/etc/license-henss-2011.txt</validHeader>
					</validHeaders>
					<strictCheck>false</strictCheck>
					<quiet>false</quiet>
					<failIfMissing>true</failIfMissing>
					<includes>
						<include>**/*.java</include>
					</includes>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <configLocation>org.eclipse.recommenders.releng/checkstyle.xml</configLocation>
          <failsOnError>true</failsOnError>
          <failsOnViolation>true</failsOnViolation>
          <executions>
		        <execution>
		          <goals>
		            <goal>checkstyle</goal>
		            <goal>check</goal>
		          </goals>
		        </execution>
		      </executions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>2.5</version>
        <configuration>
        	<targetJdk>1.6</targetJdk>
        	<minimumPriority>1</minimumPriority>
        	<failurePriority>0</failurePriority>
          <rulesets>
            <ruleset>rulesets/basic.xml</ruleset>
						<ruleset>rulesets/unusedcode.xml</ruleset>
						<ruleset>rulesets/design.xml</ruleset>
						<ruleset>rulesets/imports.xml</ruleset>
						<ruleset>rulesets/junit.xml</ruleset>
						<ruleset>rulesets/strings.xml</ruleset>
						<ruleset>rulesets/braces.xml</ruleset>
						<ruleset>rulesets/codesize.xml</ruleset>
						<ruleset>rulesets/coupling.xml</ruleset>
						<ruleset>rulesets/strictexception.xml</ruleset>
          </rulesets>
        </configuration>
        <executions>
	        <execution>
	          <goals>
	            <goal>check</goal>
	            <!--goal>cpd-check</goal-->
	          </goals>
	        </execution>
	      </executions>
      </plugin>
		</plugins>
	</build>

</project>
